--- a/equle-frontend/package.json
+++ b/equle-frontend/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-onclickoutside": "^6.12.2",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.16",
     "@types/react-onclickoutside": "^6.7.4",
     "@types/react-outside-click-handler": "^1.3.1"
   }
